# hkAVR

./: .gitignore  .gitmodules  CMakeLists.txt  cmake.py  platformio.ini  remove_arduino_deps.py
cmake/: avr-toolchain.cmake  riscv-toolchain.cmake
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake-build/lib/hkmalloc/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/docs/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/common/boot_uf2_headers/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/common/hardware_claim/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/common/pico_base_headers/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/common/pico_divider_headers/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2350/boot_stage2/: Makefile  bs2_default.dis  bs2_default.elf  bs2_default.elf.map  bs2_default_padded_checksummed.S  cmake_install.cmake
cmake-build/pico-sdk/src/rp2350/hardware_regs/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2350/hardware_structs/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2350/pico_platform/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/boot_bootrom_headers/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_adc/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_base/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_boot_lock/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_clocks/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_dcp/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_divider/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_dma/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_exception/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_flash/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_gpio/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_hazard3/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_i2c/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_interp/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_irq/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_pio/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_pll/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_powman/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_pwm/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_rcp/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_resets/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_riscv/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_riscv_platform_timer/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_sha256/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_spi/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_sync/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_sync_spin_lock/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_ticks/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_timer/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_uart/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_vreg/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_watchdog/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_xip_cache/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/hardware_xosc/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/pico_aon_timer/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/pico_async_context/: Makefile  cmake_install.cmake
cmake-build/pico-sdk/src/rp2_common/pico_atomic/: Makefile  (+1 more)
cmake-build/pico-sdk/tools/: Makefile  cmake_install.cmake
cmake-build/pico_extras/: Makefile  cmake_install.cmake
cmake-build/pico_extras/src/: Makefile  cmake_install.cmake
cmake-build/pico_extras/src/common/: Makefile  cmake_install.cmake
cmake-build/pico_extras/src/rp2_common/: Makefile  cmake_install.cmake
cmake-build/src/: Makefile  cmake_install.cmake
include/: defines.h
include/config/: arm.h  avr.h  riscv.h
include/containers/: darray.h
include/core/: event.h  hkmemory.h  hkstring.h  input.h  logger.h
include/platform/: platform.h
lib/hkmalloc/: CMakeLists.txt  hkmalloc.c  hkmalloc.h  library.json
src/: CMakeLists.txt  main.c
src/containers/: CMakeLists.txt  darray.c
src/core/: CMakeLists.txt  event.c  hkmemory.c  hkstring.c  input.c  logger.c
src/platform/: CMakeLists.txt  platform_arm_rp2350.c  platform_avr_4809.c  platform_riscv_rp2350.c
(+119 files in other folders)
